# BackendEMS

./: .gitignore  README.md  requirements.txt  startup.sh  startup.sh.old
app/: pyproject.toml  requirements.txt  startup.sh
app/.github/workflows/: build-and-deploy
app/config/: azure.py  middleware.py  settings.py  tests.py  urls.py
app/users/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  validators.py  views.py
app/users/migrations/: 0001_initial.py  0002_alter_customuser_document.py  0002_avatar_rename_is_tutor_nnauser_is_autonomy_tutor_and_more.py  0002_customuser_user_type.py  0002_remove_customuser_date_of_birth_and_more.py  0002_remove_nnauser_is_tutor_nnauser_tutor.py  0002_remove_therapist_customuser_ptr_and_more.py  0003_alter_customuser_options_customuser_date_of_birth_and_more.py  0003_alter_customuser_user_type.py  0003_alter_nnauser_document.py  0003_alter_nnauser_entered_at.py  0003_customuser_is_staff_alter_customuser_is_superuser.py  0003_customuser_status_alter_customuser_password.py  0004_alter_customuser_user_type.py  0004_alter_location_options.py  0004_alter_nnauser_document.py  0004_customuser_created_at.py  0004_customuser_is_active.py  0004_passwordresetcode.py  0005_alter_nnauser_options_alter_staffuser_options_and_more.py  0005_location_remove_customuser_first_name_and_more.py  0005_rename_tutor_nnauser_autonomy_tutor_and_more.py  0005_role_alter_location_options_customuser_roles.py  0006_alter_nnauser_educators.py  0006_customuser_is_active_customuser_is_staff.py  (+8 more)
(+7 files in other folders)
