[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["blazaid <alberto.da@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
djangorestframework = "^3.14.0"
coreapi = "^2.3.3"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
