[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["blazaid <alberto.da@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
coverage = "^7.3.2"
djangorestframework = "^3.14.0"
coreapi = "^2.3.3"
psycopg2 = "^2.9.9"
django-polymorphic = "^3.1.0"
django-rest-polymorphic = "^0.1.10"
django-filter = "^23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"